<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/custom_command_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_commands_name_hint"
            android:inputType="textCapSentences"
            android:maxLength="64"
            android:minHeight="52dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/custom_command_value_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="top|start"
            android:hint="@string/custom_commands_value_hint"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLength="4096"
            android:minHeight="104dp" />

        <EditText
            android:id="@+id/custom_command_directory_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/custom_commands_directory_hint"
            android:inputType="textNoSuggestions"
            android:maxLength="1024"
            android:minHeight="52dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/custom_command_group_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/custom_commands_group_hint"
            android:inputType="textCapWords"
            android:maxLength="40"
            android:minHeight="52dp"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/custom_command_always_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:text="@string/custom_commands_always_confirm" />

        <CheckBox
            android:id="@+id/custom_command_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/custom_commands_enabled" />
    </LinearLayout>
</ScrollView>
